Fix overflow issue with focused cards not showing an outline

--- a/src/nationalarchives/components/card/card.scss
+++ b/src/nationalarchives/components/card/card.scss
@@ -64,6 +64,14 @@
     padding: 0;
 
     grid-area: image;
+
+    border-radius: bordersVars.$rounded-border-radius 0 0
+      bordersVars.$rounded-border-radius;
+  }
+
+  &#{$modifierClass}#{&}--flipped &__image-container {
+    border-radius: 0 bordersVars.$rounded-border-radius
+      bordersVars.$rounded-border-radius 0;
   }
 
   &#{$modifierClass} &__body {
@@ -77,8 +85,6 @@
   display: flex;
   flex-direction: column;
   gap: spacing.space(1);
-
-  overflow: hidden;
 
   position: relative;
 
@@ -116,7 +122,7 @@
       inset: 0;
       z-index: 3;
 
-      border-radius: 0.1px;
+      @include borders.rounded-border;
     }
 
     &:focus-visible,
@@ -144,9 +150,14 @@
   &__image-container {
     aspect-ratio: 3/2;
 
-    order: 1;
+    overflow: hidden;
 
     position: relative;
+
+    border-radius: bordersVars.$rounded-border-radius
+      bordersVars.$rounded-border-radius 0 0;
+
+    order: 1;
 
     @include colour.image-loader-background;
   }
