--- a/src/nationalarchives/components/index-grid/index-grid.scss
+++ b/src/nationalarchives/components/index-grid/index-grid.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+@use "../../variables/borders" as bordersVars;
 @use "../../tools/borders";
 @use "../../tools/colour";
 @use "../../tools/media";
@@ -50,6 +51,9 @@
     height: auto;
 
     @include colour.image-loader-background;
+
+    border-radius: bordersVars.$rounded-border-radius
+      bordersVars.$rounded-border-radius 0 0;
   }
 
   &__item-content {
