--- a/src/nationalarchives/tools/_borders.scss
+++ b/src/nationalarchives/tools/_borders.scss
@@ -1,7 +1,5 @@
 @use "../variables/borders";
 
 @mixin rounded-border {
-  overflow: hidden;
-
   border-radius: borders.$rounded-border-radius;
 }
